start new code for learning threejs

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <button id="0">обьект 1</button>
-    <button id="1">обьект 2</button>
-    <button id="2">обьект 3</button>
+    <canvas id="canvas"></canvas>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
