--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,6 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
+    <header>
+      <h1>Будешь работатаь?</h1>
+    </header>
     <canvas id="canvas"></canvas>
     <script type="module" src="/main.js"></script>
   </body>
