--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Будешь работатаь?</h1>
+      <h1>Вроде <br> все <br> нормально</h1>
     </header>
     <canvas id="canvas"></canvas>
     <script type="module" src="/main.js"></script>
