--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
-    <header>
-      <h1>Вроде <br> все <br> нормально</h1>
-    </header>
+<!--    <header>-->
+<!--      <h1>Вроде <br> все <br> нормально</h1>-->
+<!--    </header>-->
     <canvas id="canvas"></canvas>
     <script type="module" src="/main.js"></script>
   </body>
